docs: add post entity to  swagger
